# pdfforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  requirements.txt
.cursor/skills/beta-testing-infra/: SKILL.md
.cursor/skills/deploy-flyio/: SKILL.md
.github/workflows/: cd.yml  ci.yml
docs/: beta-email-templates.md  beta-runbook.md  ci-cd-strategy.md  linkedin-v2-launch-post.md  medium-v2-launch-blog.md  payments-setup.md  v2-feature-launch-post.md
frontend/: .env.local.example  package-lock.json  package.json  playwright.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/tests/: production.e2e.spec.js
mcp/: README.md  package-lock.json  package.json
mcp/src/: index.ts
pdfforge_api/: __init__.py
pdfforge_api/auth/: __init__.py  api_key.py
pdfforge_api/openapi/: __init__.py  spec.py
pdfforge_api/routes/: __init__.py  agent.py  batch.py  capabilities.py  docs.py  jobs.py  pipeline.py  tools.py
pdfforge_api/templates/: redoc.html  swagger.html
pdfforge_api/utils/: __init__.py  async_executor.py  job_store.py  rate_limit.py  response.py  webhook.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: async_webhook.py  basic_usage.py  pipeline_example.py
sdk/python/pdfforge/: __init__.py  client.py  exceptions.py  models.py
sdk/python/pdfforge/tools/: __init__.py  decrypt.py  encrypt.py  extract.py  merge.py  rotate.py  split.py
sdk/python/pdfforge/utils/: __init__.py  file_utils.py
sdk/python/tests/: test_client.py  test_tools.py
(+10 files in other folders)
